Fix tagline size on small screens.

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -45,3 +45,19 @@
   font-size: 60px;
   margin: 0;
 }
+
+@media only screen and (max-width: 768px) {
+  .hero {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .heroInner {
+    padding: 0;
+  }
+
+  .heroProjectTagline {
+    font-size: 36px;
+    text-align: center;
+  }
+}
